syntax = "proto3";

package api.kessel.inventory.v1;

import "google/api/annotations.proto";

option go_package = "api/kessel/inventory/v1;v1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1";

service InventoryHealthService {
  rpc GetLivez (GetLivezRequest) returns (GetLivezResponse){
    option (google.api.http) = {
      get: "/api/inventory/v1/livez"
    };
  };
  rpc GetReadyz (GetReadyzRequest) returns (GetReadyzResponse){
    option (google.api.http) = {
      get: "/api/inventory/v1/readyz"
    };
  };
}

message GetLivezRequest {}
message GetLivezResponse {
  string status = 1;
  uint32 code = 2;
}

message GetReadyzRequest {}
message GetReadyzResponse {
  string status = 1;
  uint32 code = 2;
}
