syntax = "proto3";

package api.kessel.inventory.v1beta1;

option go_package = "api/kessel/inventory/v1beta1;v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message ReporterData {

  enum Reporter_typeEnum {
    Reporter_typeEnum_ACM = 0;
    Reporter_typeEnum_HBI = 1;
    Reporter_typeEnum_OCM = 2;
    Reporter_typeEnum_OTHER = 3;
    Reporter_typeEnum_UNKNOWN = 4;
  }

  Reporter_typeEnum reporter_type = 245778392;

  // The ID of the instance of the reporter. This is derived from the
  // authentication mechanism, i.e. authentication token.
  string reporter_instance_id = 241085112;

  // The URL for this resource in the reporter's management UI console. For
  // example this would be the cluster URL in the HCC Console for an OCM
  // reported cluster.
  string console_href = 145854740;

  // Reporter specific API link to the resource.
  string api_href = 430210609;

  // The ID assigned to this resource by the reporter, for example OCM cluster
  // ID, HBI's host id, or ACM managed cluster name etc.
  string local_resource_id = 508976189;

  // version of the reporter
  string reporter_version = 269629306;
}
